--- a/webapp/view/ManagerFeedback.view.xml
+++ b/webapp/view/ManagerFeedback.view.xml
@@ -1,5 +1,6 @@
 <mvc:View
 	controllerName="sap.ui.demo.walkthrough.controller.ManagerFeedback"
+	xmlns:core="sap.ui.core"
 	xmlns:mvc="sap.ui.core.mvc"
 	xmlns="sap.m"
 >
@@ -226,10 +227,31 @@
 						class="myCustomButton"
 						icon="sap-icon://accept"
 					/>
-					<CheckBox
-						id="completedCheckBox"
-						text="is Completed?"
-					/>
+					<HBox id="toUpdateFields">
+						<CheckBox
+                     class="sapUiMediumMarginEnd"
+							id="completedCheckBox"
+							text="is Completed?"
+							selected="{
+                        path: 'Status',
+                        formatter: '.formatter.checkBoxStatus'
+                     }"
+						/>
+						<Select
+							forceSelection="false"
+							id="daysEvaluatedSelect"
+                     tooltip="Select the number of project days evaluated"
+							selectedKey="{DaysEvaluated}"
+							items="{
+                        path: 'DaysEvaluatedModel>/EvaluatedDays'
+                     }"
+						>
+							<core:ListItem
+								key="{DaysEvaluatedModel>Id}"
+								text="{DaysEvaluatedModel>Name}"
+							/>
+						</Select>
+					</HBox>
 				</contentLeft>
 				<contentRight>
 					<Button
