final fixes for peg update

--- a/webapp/view/ManagerFeedback.view.xml
+++ b/webapp/view/ManagerFeedback.view.xml
@@ -232,10 +232,8 @@
                      class="sapUiMediumMarginEnd"
 							id="completedCheckBox"
 							text="is Completed?"
-							selected="{
-                        path: 'Status',
-                        formatter: '.formatter.checkBoxStatus'
-                     }"
+							selected="{= ${Status} === '2' ? true : false}"
+                     select="onToggleStatus"
 						/>
 						<Select
 							forceSelection="false"
