--- a/webapp/view/MyTeamFeedback.view.xml
+++ b/webapp/view/MyTeamFeedback.view.xml
@@ -4,7 +4,7 @@
 	xmlns:mvc="sap.ui.core.mvc"
 >
 	<Page
-		title="My Team Feedback"
+		title="{i18n>MyTeamFeedbackPageTitle}"
 		showNavButton="true"
 		navButtonPress=".onNavBack"
 	>
