--- a/webapp/view/MyTeamFeedback.view.xml
+++ b/webapp/view/MyTeamFeedback.view.xml
@@ -48,6 +48,14 @@
 						path: '/FeedbackTeamSet'
 					}"
 				>
+				<headerToolbar>
+				<Toolbar>
+					<ToolbarSpacer/>
+					<Title text = "Search by user:"/>
+					<SearchField id = "searchInput" width  = "30%" search = ".onUserFilter" placeholder = "Filter by User"/>
+				</Toolbar>
+				</headerToolbar>
+
 					<columns>
 						
 						<Column width="12em">
