--- a/webapp/view/MyTeamFeedback.view.xml
+++ b/webapp/view/MyTeamFeedback.view.xml
@@ -8,7 +8,6 @@
 		showNavButton="true"
 		navButtonPress=".onNavBack"
 	>
-
 		<IconTabBar
 			id="PegTabBarManager"
 			select=".onFilterSelect"
@@ -48,16 +47,19 @@
 						path: '/FeedbackTeamSet'
 					}"
 				>
-				<headerToolbar>
-				<Toolbar>
-					<ToolbarSpacer/>
-					<Title text = "Search by user:"/>
-					<SearchField id = "searchField" width  = "30%" search = ".onUserFilter" placeholder = "Filter by User"/>
-				</Toolbar>
-				</headerToolbar>
-
+					<headerToolbar>
+						<Toolbar>
+							<ToolbarSpacer/>
+							<Title text="Search by employee:"/>
+							<SearchField
+								id="searchField"
+								width="30%"
+								liveChange=".onUserFilter"
+								placeholder="Filter by employee"
+							/>
+						</Toolbar>
+					</headerToolbar>
 					<columns>
-						
 						<Column width="12em">
 							<Text text="From Manager"/>
 						</Column>
@@ -80,11 +82,12 @@
 					<items>
 						<ColumnListItem
 							type="Navigation"
-							press = "onPressTeamFeedback"
+							press="onPressTeamFeedback"
 							highlight="{
 								path: 'Status',
 								formatter: '.formatter.highlightStatus'
-							}">
+							}"
+						>
 							<cells>
 								<Text text="{FromUser}"/>
 								<Text text="{ToUser}"/>
@@ -114,7 +117,7 @@
 						type="Emphasized"
 						icon="sap-icon://group"
 					/>
-                    <Button
+					<Button
 						id="otherteamsbutton"
 						text="Other teams"
 						press=".onOtherTeams"
@@ -127,7 +130,7 @@
 						press=".onNewFeedback"
 						class="myCustomButton"
 						icon="sap-icon://add"
-					/>			
+					/>
 				</contentRight>
 			</Bar>
 		</footer>
