--- a/webapp/view/ReviewTeamMember.view.xml
+++ b/webapp/view/ReviewTeamMember.view.xml
@@ -21,6 +21,7 @@
 							<GenericTile
 								class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
 								header="Manager who demanded feedback"
+								subheader="{Manager}"
 								frameType="TwoByHalf"
 								headerImage="sap-icon://manager"
 							/>
@@ -51,13 +52,29 @@
 								tooltip="Rating Tooltip"
 							/>
 						</VBox>
+						<VBox>
 						<GenericTile
 							class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
 							header="Sent At"
 							subheader="{= ${SentAt} !== null ? ${SentAt}.toLocaleString() : ''}"
-							frameType="TwoByOne"
+							frameType="TwoByHalf"
 							headerImage="sap-icon://date-time"
 						/>
+						<GenericTile
+							class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
+							header="Category"
+							subheader="{
+                        path: 'Categories',
+                        formatter: '.formatter.feedbackCategory'
+                     }"
+							frameType="TwoByHalf"
+							headerImage="sap-icon://multi-select"
+						/>
+
+						
+						
+						</VBox>
+						
 					</HBox>
 				</VBox>
 			</content>
