--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -3,10 +3,10 @@
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc"
 >
-	<Page title="{i18n>MainPageTitle}">
+	<Page title="{i18n>mainPageTitle}">
 		<headerContent>
 			<Button 
-			text="{i18n>ProfileBtn}"
+			text="{i18n>profileBtn}"
 			icon="sap-icon://account"
 			press=".onProfile"/>
 			<Button 
@@ -29,7 +29,7 @@
 				/>
 				<GenericTile
 					class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
-					header="{i18n>Feedback}"
+					header="{i18n>feedback}"
 					mode="HeaderMode"
 					backgroundImage="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAA1BMVEXP3/n/SH/PAAAASElEQVR4nO3BgQAAAADDoPlTX+AIVQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADwDcaiAAFXD1ujAAAAAElFTkSuQmCC"
 					frameType="TwoByOne"
@@ -37,45 +37,13 @@
 				/>
 				<GenericTile
 					class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
-					header="{i18n>TeamFeedback}"
+					header="{i18n>teamFeedback}"
 					mode="HeaderMode"
 					backgroundImage="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAA1BMVEXP3/n/SH/PAAAASElEQVR4nO3BgQAAAADDoPlTX+AIVQEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADwDcaiAAFXD1ujAAAAAElFTkSuQmCC"
 					frameType="TwoByOne"
 					press=".onTeamFeedback"
 				/>
 		</FlexBox>
-		<!-- <FlexBox
-			alignItems="Center"
-			justifyContent="Center"
-		>
-			<Panel>
-				<content>
-					<Button
-						text="{i18n>ViewProfile}"
-						class="myCustomButton"
-						press=".onProfile"
-						width="60%"
-					/>
-					<Button
-						text="PEG"
-						class="myCustomButton"
-						press=".onPEG"
-						width="60%"
-					/>
-					<Button
-						text="Feedback"
-						class="myCustomButton"
-						press=".onFeedback"
-						width="60%"
-					/>
-					<Button
-						text="{i18n>LogOut}"
-						press=".onLogOut"
-						class="myCustomButton"
-						width="60%"
-					/>
-				</content>
-			</Panel>
-		</FlexBox> -->
+		
 	</Page>
 </mvc:View>
