--- a/webapp/view/ReviewTeamMember.view.xml
+++ b/webapp/view/ReviewTeamMember.view.xml
@@ -21,14 +21,15 @@
 						>
 							<GenericTile
 								class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
-								header="Manager who demanded feedback"
+								
+								header = "{i18n>teamFeedbackDetailPageManagerTileTitle}"
 								subheader="{Manager}"
 								frameType="TwoByHalf"
 								headerImage="sap-icon://manager"
 							/>
 							<GenericTile
 								class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
-								header="Employee reviewed"
+								header = "{i18n>teamFeedbackDetailPageEmployeeReviewTileTitle}"
 								subheader="{ToUser}"
 								frameType="TwoByHalf"
 								headerImage="sap-icon://employee"
@@ -40,7 +41,7 @@
 						>
 							<GenericTile
 								class="sapUiSmallMarginBottom sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
-								header="Project ID"
+								header = "{i18n>teamFeedbackDetailPageProjectTileTitle}"
 								subheader="{= ${ProjectId} !== '0000' ? ${ProjectId} : 'Project not specified'}"
 								frameType="TwoByHalf"
 								headerImage="sap-icon://group"
@@ -56,14 +57,14 @@
 						<VBox>
 						<GenericTile
 							class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
-							header="Sent At"
+							header="{i18n>teamFeedbackDetailPageSendDateTileTitle}"
 							subheader="{= ${SentAt} !== null ? ${SentAt}.toLocaleString() : ''}"
 							frameType="TwoByHalf"
 							headerImage="sap-icon://date-time"
 						/>
 						<GenericTile
 							class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
-							header="Category"
+							header="{i18n>teamFeedbackDetailPageCategoryTileTitle}"
 							subheader="{
                         path: 'Categories',
                         formatter: '.formatter.feedbackCategory'
@@ -94,7 +95,7 @@
 			<Bar>
 				<contentRight>
 					<Button
-						text="Send Feedback"
+						text="{i18n>sendFeedbackBtn}"
 						press=".onSendFeedback"
 						icon="sap-icon://paper-plane"
 					/>
