--- a/webapp/view/RequestPEG.view.xml
+++ b/webapp/view/RequestPEG.view.xml
@@ -94,7 +94,7 @@
 			<Bar>
 				<contentRight>
 					<Button
-						text="{i18n>sendSRequestBtn}"
+						text="{i18n>sendRequestBtn}"
 						press="onSendRequest"
 						class="myCustomButton"
 						icon="sap-icon://paper-plane"
