--- a/webapp/view/ReviewTeamMember.view.xml
+++ b/webapp/view/ReviewTeamMember.view.xml
@@ -16,17 +16,19 @@
 					width="100%"
 				>
 					<HBox>
-						<VBox width="100%">
+						<VBox
+							width="100%"
+						>
 							<GenericTile
 								class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
-								header="{i18n>ManagerTileTitle}"
+								header = "{i18n>managerTileTitle}"
 								subheader="{Manager}"
 								frameType="TwoByHalf"
 								headerImage="sap-icon://manager"
 							/>
 							<GenericTile
 								class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
-								header="{i18n>EmployeeReviewTileTitle}"
+								header = "{i18n>employeeReviewTileTitle}"
 								subheader="{ToUser}"
 								frameType="TwoByHalf"
 								headerImage="sap-icon://employee"
@@ -38,7 +40,7 @@
 						>
 							<GenericTile
 								class="sapUiSmallMarginBottom sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
-								header="{i18n>ProjectTileTitle}"
+								header = "{i18n>projectTileTitle}"
 								subheader="{= ${ProjectId} !== '0000' ? ${ProjectId} : 'Project not specified'}"
 								frameType="TwoByHalf"
 								headerImage="sap-icon://group"
@@ -46,56 +48,54 @@
 							<Label text="Give a grade"/>
 							<RatingIndicator
 								id="RatingTeamMember"
+								maxValue="4"
 								iconSize="32px"
-								value="{Rating}"
-								tooltip="{i18n>RatingTooltip}"
+								tooltip="Rating Tooltip"
 							/>
 						</VBox>
 						<VBox>
-							<GenericTile
-								class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
-								header="{i18n>SendDateTileTitle}"
-								subheader="{= ${SentAt} !== null ? ${SentAt}.toLocaleString() : ''}"
-								frameType="TwoByHalf"
-								headerImage="sap-icon://date-time"
-							/>
-							<GenericTile
-								class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
-								header="{i18n>CategoryTileTitle}"
-								subheader="{
-                           path: 'Categories',
-                           formatter: '.formatter.feedbackCategory'
-                        }"
-								frameType="TwoByHalf"
-								headerImage="sap-icon://multi-select"
-							/>
+						<GenericTile
+							class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
+							header="{i18n>sendDateTileTitle}"
+							subheader="{= ${SentAt} !== null ? ${SentAt}.toLocaleString() : ''}"
+							frameType="TwoByHalf"
+							headerImage="sap-icon://date-time"
+						/>
+						<GenericTile
+							class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout"
+							header="{i18n>categoryTileTitle}"
+							subheader="{
+                        path: 'Categories',
+                        formatter: '.formatter.feedbackCategory'
+                     }"
+							frameType="TwoByHalf"
+							headerImage="sap-icon://multi-select"
+						/>
+
+						
+						
 						</VBox>
+						
 					</HBox>
 				</VBox>
 			</content>
 		</Panel>
-		<TextArea
-			id="ReviewTextArea"
-			value="{Description}"
-			class="sapUiMediumMarginBeginEnd sapUiSmallMarginTop"
-			placeholder="Enter feedback description"
-			growing="true"
-			growingMaxLines="7"
-			width="95%"
-			height="60%"
+        <TextArea
+				id="ReviewTextArea"
+                class="sapUiMediumMarginBeginEnd sapUiSmallMarginTop"
+				placeholder="Enter feedback description"
+				editable="true"
+				growing="true"
+				growingMaxLines="7"
+				width="95%"
+				height="60%"
 		/>
 		<footer>
 			<Bar>
 				<contentRight>
-					<CheckBox
-						id="completedCheckBox"
-						text="is Completed?"
-						selected="{= ${Status} === '2' ? true : false}"
-						select="onToggleStatus"
-					/>
 					<Button
 						text="{i18n>sendFeedbackBtn}"
-						press="onSendFeedback"
+						press=".onSendFeedback"
 						icon="sap-icon://paper-plane"
 					/>
 				</contentRight>
